--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.10.0
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  location: ^7.0.1
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  sqflite: ^2.4.1
   uuid: ^4.5.1
 
 dev_dependencies:
